# wb-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.infra/: Dockerfile
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/publicador/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/app/routes/: example.py
{{cookiecutter.project_slug}}/app/{% if cookiecutter.use_database == 'y' %}db{% endif %}/: connection.py
{{cookiecutter.project_slug}}/app/{% if cookiecutter.use_database == 'y' %}migrations{% endif %}/: base.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/schemas/: example.py
